--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://example.com"
+baseURL = "https://liblib.netlify.app"
 languageCode = "en-us"
 title = "Some Title"
 theme = "minimal"
